idf_component_register(SRCS 
		"buffer.c"
		"conf.c"
		"connection.c"
		"crypto.c"
		"devtools.c"
		"dropin.c"
		"event.c"
		"hash.c"
		"list.c"
		"logger.c"
		"meshlink.c"
		"meta.c"
		"net.c"
		"net_setup.c"
		"net_socket.c"
		"netutl.c"
		"node.c"
		"prf.c"
		"protocol.c"
		"protocol_auth.c"
		"protocol_edge.c"
		"protocol_key.c"
		"protocol_misc.c"
		"splay_tree.c"
		"sptps.c"
		"utils.c"
		"xoshiro.c"
		"ed25519/add_scalar.c"
		"ed25519/ecdh.c"
		"ed25519/ecdsa.c"
		"ed25519/ecdsagen.c"
		"ed25519/fe.c"
		"ed25519/ge.c"
		"ed25519/key_exchange.c"
		"ed25519/keypair.c"
		"ed25519/sc.c"
		"ed25519/seed.c"
		"ed25519/sha512.c"
		"ed25519/sign.c"
		"ed25519/verify.c"
		"chacha-poly1305/chacha-poly1305.c"
		"chacha-poly1305/chacha.c"
		"chacha-poly1305/poly1305.c"
		"mlt_main.c"
                INCLUDE_DIRS ".")
